syntax = "proto3";

option go_package = "./messengerpb";

package messengerpb;

import "google/protobuf/timestamp.proto";

service MessengerService {
    rpc SignUp(SignUpData) returns (User) {}
    rpc SignIn(SignInData) returns (User) {}
    rpc SendMessage(stream Message) returns (MessageAck) {}
    rpc ReceiveMessage(User) returns (stream Message) {}
}

message SignUpData {
    string first_name = 1;
    string second_name = 2;
    SignInData signInData = 3;
}

message SignInData {
    string login = 1;
    string password = 2;
}

message User {
    int64 id = 1;
    string first_name = 2;
}

message Message {
    google.protobuf.Timestamp time = 1;
    User sender = 2;
    User receiver = 3;
    string message = 4;
}

message MessageAck {
    string status = 1;
}